--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <title>Educational Platform</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <img src="utils/photos/mainBack.png" id="imgBack">
+    <header class="topbar">
+        <div class="logo">EduPlatform</div>
+        <nav class="nav-links">
+            <a href="screens/CoursesScreen/CoursesScreen.html" target="_blank">Courses</a>
+            <a href="#">Assignments</a>
+            <a href="#">Forums</a>
+            <a href="#">Progress</a>
+            <a href="#">Certifications</a>
+            <a href="#">Support</a>
+            <a href="#">Profile</a>
+        </nav>
+    </header>
+
+    <main>
+        <img src="utils/photos/mainBack.png" id="imgBack" alt="Background Image">
+    </main>
 </body>
 </html>
