--- a/Screens/LoginScreen/LoginScreen.html
+++ b/Screens/LoginScreen/LoginScreen.html
@@ -20,6 +20,6 @@
             </div>
         </form>
         <button class="loginButton" >Login</button> <br>
-        <button class="RegisterButton" type="button" onclick="window.open('.html', '_blank')">Create Account</button>
+        <button class="RegisterButton" type="button" onclick="window.open('/Screens\\RegisterScreen\\RegisterScreen.html', '_blank')">Create Account</button>
     </body>
 </html>
