--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="#">Progress</a>
             <a href="#">Certifications</a>
             <a href="#">Support</a>
+            <a href="screens/ContactUs/ContactUs.html" target="_blank">ContactUs</a>
             <a href="#">Profile</a>
         </nav>
     </header>
