--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <a href="#">Profile</a>
         </nav>
     </header>
-
-    <main>
+    <div class="stack-container">
         <img src="utils/photos/mainBack.png" id="imgBack" alt="Background Image">
-    </main>
+        <button class="loginButton" type="button" onclick="window.open('screens/LoginScreen/LoginScreen.html')">Login</button>
+    </div>
 </body>
 </html>
