--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <div class="logo">EduPlatform</div>
         <nav class="nav-links">
             <a href="screens/CoursesScreen/CoursesScreen.html" target="_blank">Courses</a>
-            <a href="#">Assignments</a>
-            <a href="#">Forums</a>
-            <a href="#">Progress</a>
-            <a href="#">Certifications</a>
-            <a href="#">Support</a>
+            <a href="#" target="_blank">Assignments</a>
+            <a href="#" target="_blank">Forums</a>
+            <a href="#" target="_blank">Progress</a>
+            <a href="#" target="_blank">Certifications</a>
+            <a href="#" target="_blank">Support</a>
             <a href="screens/ContactUs/ContactUs.html" target="_blank">ContactUs</a>
             <a href="#">Profile</a>
         </nav>
