--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <nav class="nav-links">
             <a href="screens/CoursesScreen/CoursesScreen.html" target="_blank">Courses</a>
             <a href="#" target="_blank">Assignments</a>
-            <a href="#" target="_blank">Forums</a>
-            <a href="#" target="_blank">Progress</a>
+            <a href="Screens/StudentDiscussionForums/Discussions.html" target="_blank">Forums</a>
+            <a href="Screens/ProgressScreen/Progress.html" target="_blank">Progress</a>
             <a href="#" target="_blank">Certifications</a>
             <a href="#" target="_blank">Support</a>
             <a href="screens/ContactUs/ContactUs.html" target="_blank">ContactUs</a>
@@ -22,6 +22,7 @@
     <div class="stack-container">
         <img src="utils/photos/mainBack.png" id="imgBack" alt="Background Image">
         <button class="loginButton" type="button" onclick="window.open('screens/LoginScreen/LoginScreen.html')">Login</button>
+        <button class="RegisterButton" type="button" onclick="window.open('Screens/RegisterScreen/RegisterScreen.html')">Register</button>
     </div>
 </body>
 </html>
