--- a/Screens/RegisterScreen/RegisterScreen.html
+++ b/Screens/RegisterScreen/RegisterScreen.html
@@ -11,20 +11,20 @@
     <h1>Register</h1>
     <form>
         <div class="Name">
-            <label id="name">Name</label>
-            <input type="text"> <br>
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" required> <br>
         </div>
 
         <div class="password">
-            <label id="password">Password</label>
-            <input type="password" class="password">
+            <label for="password">Password</label>
+            <input type="password" class="password" id="password" required>
         </div>
     </form>
 
-    <button type="button" onclick="window.open(index.html)" class="createAccount">Create</button>
+    <button type="button" onclick="create()" class="createAccount">Create</button>
+
+
+
+    <script src="register.js"></script>
 </body>
-
-
-
-
 </html>
