--- a/index.html
+++ b/index.html
@@ -14,11 +14,19 @@
             <a href="Screens/StudentDiscussionForums/Discussions.html" target="_blank">Forums</a>
             <a href="Screens/ProgressScreen/Progress.html" target="_blank">Progress</a>
             <a href="#" target="_blank">Certifications</a>
+            <!-- <a href="#" target="_blank">Support</a>
+            <a href="screens/ContactUs/ContactUs.html" target="_blank">ContactUs</a>
+            <a href="#">Profile</a> -->
+        </nav>
+    </header>
+    <footer class="bottom-bar">
+        <p>&copy; 2025 EduPlatform. All rights reserved.</p>
+        <nav class="footer-links">
             <a href="#" target="_blank">Support</a>
             <a href="screens/ContactUs/ContactUs.html" target="_blank">ContactUs</a>
             <a href="#">Profile</a>
         </nav>
-    </header>
+    </footer>
     <div class="stack-container">
         <img src="utils/photos/mainBack.png" id="imgBack" alt="Background Image">
         <button class="loginButton" type="button" onclick="window.open('screens/LoginScreen/LoginScreen.html')">Login</button>
