--- a/Screens/StudentDiscussionForums/Discussions.html
+++ b/Screens/StudentDiscussionForums/Discussions.html
@@ -48,5 +48,6 @@
     <footer>
         <p>&copy; 2025 Student Discussion Forums. All rights reserved.</p>
     </footer>
+    <script src="Disscussion.js"></script>
 </body>
 </html>
