--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="logo">EduPlatform</div>
         <nav class="nav-links">
             <a href="screens/CoursesScreen/CoursesScreen.html" target="_blank">Courses</a>
-            <a href="#" target="_blank">Assignments</a>
+            <a href="Screens/AssigmentScreen/Assigment.html" target="_blank">Assignments</a>
             <a href="Screens/StudentDiscussionForums/Discussions.html" target="_blank">Forums</a>
             <a href="Screens/ProgressScreen/Progress.html" target="_blank">Progress</a>
             <a href="#" target="_blank">Certifications</a>
