--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <a href="screens/CoursesScreen/CoursesScreen.html" target="_blank">Courses</a>
             <a href="#" target="_blank">Assignments</a>
             <a href="Screens/StudentDiscussionForums/Discussions.html" target="_blank">Forums</a>
+            <a href="Screens/VideoLecture&tutorials/video.html"target="_blank"> videos Lectures & Tutorials</a>
             <a href="Screens/ProgressScreen/Progress.html" target="_blank">Progress</a>
             <a href="#" target="_blank">Certifications</a>
             <!-- <a href="#" target="_blank">Support</a>
