--- a/Screens/VideoLecture&tutorials/video.html
+++ b/Screens/VideoLecture&tutorials/video.html
@@ -13,12 +13,14 @@
             <source src="../../utils/videos/welcome.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+        <a href="../../utils/videos/welcome.mp4" download class="download-link">Download Lecture 1</a><!-- da bta3 el download link for L1-->
 
         <h2>Lecture 2</h2>
         <video controls>
-            <source src="../../utils/videos/welcome.mp4" type="video/mp4">
+            <source src="../../utils/videos/welcome.mp4" type="video/mp4"> 
             Your browser does not support the video tag.
         </video>
+        <a href="../../utils/videos/welcome.mp4" download class="download-link">Download Lecture 2</a><!-- da bta3 el download link for L2-->
     </div>
     <a href="index.html">Back to Main UI</a>
 </body>
