--- a/Screens/VideoLecture&tutorials/video.html
+++ b/Screens/VideoLecture&tutorials/video.html
@@ -22,6 +22,6 @@
         </video>
         <a href="../../utils/videos/welcome.mp4" download class="download-link">Download Lecture 2</a><!-- da bta3 el download link for L2-->
     </div>
-    <a href="index.html">Back to Main UI</a>
+    <a href="/index.html">Back to Main UI</a>
 </body>
 </html>
