--- a/Screens/RegisterScreen/RegisterScreen.html
+++ b/Screens/RegisterScreen/RegisterScreen.html
@@ -1,29 +1,44 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="RegisterScreen.css">
-
 </head>
 
 <body>
-    <h1>Register</h1>
-    <form>
-        <div class="Name">
-            <label for="name">Name</label>
-            <input type="text" name="name" id="name" required> <br>
+    <div class="register-container">
+        <h1>Register</h1>
+        <form>
+            <div class="form-group">
+                <label for="name">Full Name</label>
+                <input type="text" name="name" id="name" required>
+            </div>
+
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" required>
+            </div>
+
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" required>
+            </div>
+
+            <div class="form-group">
+                <label for="confirm-password">Confirm Password</label>
+                <input type="password" name="confirm-password" id="confirm-password" required>
+            </div>
+
+            <button type="button" onclick="create()" class="createAccount">Create Account</button>
+        </form>
+
+        <div class="login-prompt">
+            Already have an account? <a href="../LoginScreen/LoginScreen.html">Login here</a>
         </div>
-
-        <div class="password">
-            <label for="password">Password</label>
-            <input type="password" class="password" id="password" required>
-        </div>
-    </form>
-
-    <button type="button" onclick="create()" class="createAccount">Create</button>
-
-
+    </div>
 
     <script src="register.js"></script>
 </body>
