--- a/index.html
+++ b/index.html
@@ -15,17 +15,21 @@
             <a href="Screens/VideoLecture&tutorials/video.html"target="_blank"> videos Lectures & Tutorials</a>
             <a href="Screens/ProgressScreen/Progress.html" target="_blank">Progress</a>
             <a href="#" target="_blank">Certifications</a>
-            <!-- <a href="#" target="_blank">Support</a>
-            <a href="screens/ContactUs/ContactUs.html" target="_blank">ContactUs</a>
-            <a href="#">Profile</a> -->
         </nav>
     </header>
+
+
+
+
+
+
     <footer class="bottom-bar">
         <p>&copy; 2025 EduPlatform. All rights reserved.</p>
         <nav class="footer-links">
             <a href="#" target="_blank">Support</a>
             <a href="screens/ContactUs/ContactUs.html" target="_blank">ContactUs</a>
-            <a href="#">Profile</a>
+            <a href="Screens/Instructors/instr.html">Instructor Profiles</a>
+            <a href="Screens/liveChat/chat.html" target="_blank">Live Chat</a>
         </nav>
     </footer>
     <div class="stack-container">
