course content screen

--- a/Screens/CoursesScreen/CoursesScreen.html
+++ b/Screens/CoursesScreen/CoursesScreen.html
@@ -4,12 +4,37 @@
     <meta charset="UTF-8">
     <title>Courses</title>
     <link rel="stylesheet" href="CoursesScreen.css">
+    <style>
+        .nav-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #1e5631;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            margin: 20px 0;
+            transition: background-color 0.3s;
+        }
+        .nav-button:hover {
+            background-color: #163823;
+        }
+        .header-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+    </style>
 </head>
 <body>
-    <h1>Available Courses</h1>
+    <div class="header-container">
+        <h1>Available Courses</h1>
+        <a href="../CourseContent/Course.html" class="nav-button">ShowContent</a>
+    </div>
+    
     <div class="courses-container">
         <div class="course-card">
-            <img src="/utils\photos\AI.jpg" alt="AI Course" class="course-img">
+            <img src="/utils/photos/AI.jpg" alt="AI Course" class="course-img">
             <div class="course-title">Introduction to AI</div>
             <div class="course-info">Begins: May 5, 2025</div>
             <div class="course-info">Price: $99</div>
@@ -29,22 +54,21 @@
         <div class="course-card">
             <img src="/utils/photos/statistics.png" alt="statistics" class="course-img">
             <div class="course-title">Data Science with Python</div>
-            <div class="course-info">Begins: agus 1, 2025</div>
+            <div class="course-info">Begins: August 1, 2025</div>
             <div class="course-info">Price: $70</div>
         </div>
         <div class="course-card">
-            <img src="/utils/photos/devops.webp" alt="Data Science" class="course-img">
-            <div class="course-title">Data Science with Python</div>
+            <img src="/utils/photos/devops.webp" alt="DevOps" class="course-img">
+            <div class="course-title">DevOps Fundamentals</div>
             <div class="course-info">Begins: May 30, 2025</div>
             <div class="course-info">Price: $160</div>
         </div>
         <div class="course-card">
             <img src="/utils/photos/flutter.jpg" alt="flutter" class="course-img">
-            <div class="course-title">Data Science with Python</div>
-            <div class="course-info">Begins: july 19, 2025</div>
+            <div class="course-title">Mobile Development with Flutter</div>
+            <div class="course-info">Begins: July 19, 2025</div>
             <div class="course-info">Price: $19</div>
         </div>
-
     </div>
 </body>
 </html>
