--- a/index.html
+++ b/index.html
@@ -14,15 +14,9 @@
             <a href="Screens/StudentDiscussionForums/Discussions.html" target="_blank">Forums</a>
             <a href="Screens/VideoLecture&tutorials/video.html"target="_blank"> videos Lectures & Tutorials</a>
             <a href="Screens/ProgressScreen/Progress.html" target="_blank">Progress</a>
-            <a href="#" target="_blank">Certifications</a>
+            <a href="Screens/certificationScreen/cert.html" target="_blank">Certifications</a>
         </nav>
     </header>
-
-
-
-
-
-
     <footer class="bottom-bar">
         <p>&copy; 2025 EduPlatform. All rights reserved.</p>
         <nav class="footer-links">
