--- a/Screens/RegisterScreen/RegisterScreen.html
+++ b/Screens/RegisterScreen/RegisterScreen.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,34 +11,53 @@
     <div class="register-container">
         <h1>Register</h1>
         <form>
+            <!-- Full Name Input -->
             <div class="form-group">
                 <label for="name">Full Name</label>
                 <input type="text" name="name" id="name" required>
             </div>
 
+            <!-- Email Input -->
             <div class="form-group">
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email" required>
             </div>
 
+            <!-- Password Input -->
             <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password" required>
             </div>
 
+            <!-- Confirm Password Input -->
             <div class="form-group">
                 <label for="confirm-password">Confirm Password</label>
                 <input type="password" name="confirm-password" id="confirm-password" required>
             </div>
 
+            <!-- Academic Level Dropdown -->
+            <div class="form-group">
+                <label for="academic-level">Academic Level</label>
+                <select name="academic-level" id="academic-level" required>
+                    <option value="" disabled selected>Select your academic level</option>
+                    <option value="1">Level 1</option>
+                    <option value="2">Level 2</option>
+                    <option value="3">Level 3</option>
+                    <option value="4">Level 4</option>
+                </select>
+            </div>
+
+            <!-- Create Account Button -->
             <button type="button" onclick="create()" class="createAccount">Create Account</button>
         </form>
 
+        <!-- Login Prompt -->
         <div class="login-prompt">
             Already have an account? <a href="../LoginScreen/LoginScreen.html">Login here</a>
         </div>
     </div>
 
+    <!-- Link to the JavaScript file -->
     <script src="register.js"></script>
 </body>
 </html>
