--- a/Screens/CourseContent/Course.html
+++ b/Screens/CourseContent/Course.html
@@ -9,6 +9,9 @@
 <body>
     <div class="container">
         <h1>Course Browser</h1>
+        <div class="search-container">
+            <input type="text" id="searchInput" placeholder="Search for courses...">
+        </div>
         
         <div class="category-filter">
             <button class="category-btn active" data-category="all">All Courses</button>
