--- a/Screens/CoursesScreen/CoursesScreen.html
+++ b/Screens/CoursesScreen/CoursesScreen.html
@@ -34,37 +34,37 @@
     
     <div class="courses-container">
         <div class="course-card">
-            <img src="/utils/photos/AI.jpg" alt="AI Course" class="course-img">
+            <img src="../../utils/photos/AI.jpg" alt="AI Course" class="course-img">
             <div class="course-title">Introduction to AI</div>
             <div class="course-info">Begins: May 5, 2025</div>
             <div class="course-info">Price: $99</div>
         </div>
         <div class="course-card">
-            <img src="/utils/photos/web.jpg" alt="Web Development" class="course-img">
+            <img src="../../utils/photos/web.jpg" alt="Web Development" class="course-img">
             <div class="course-title">Web Development Bootcamp</div>
             <div class="course-info">Begins: June 1, 2025</div>
             <div class="course-info">Price: $149</div>
         </div>
         <div class="course-card">
-            <img src="/utils/photos/data.jpg" alt="Data Science" class="course-img">
+            <img src="../../utils/photos/data.jpg" alt="Data Science" class="course-img">
             <div class="course-title">Data Science with Python</div>
             <div class="course-info">Begins: May 20, 2025</div>
             <div class="course-info">Price: $129</div>
         </div>
         <div class="course-card">
-            <img src="/utils/photos/statistics.png" alt="statistics" class="course-img">
+            <img src="../../utils/photos/statistics.png" alt="statistics" class="course-img">
             <div class="course-title">Data Science with Python</div>
             <div class="course-info">Begins: August 1, 2025</div>
             <div class="course-info">Price: $70</div>
         </div>
         <div class="course-card">
-            <img src="/utils/photos/devops.webp" alt="DevOps" class="course-img">
+            <img src="../../utils/photos/devops.webp" alt="DevOps" class="course-img">
             <div class="course-title">DevOps Fundamentals</div>
             <div class="course-info">Begins: May 30, 2025</div>
             <div class="course-info">Price: $160</div>
         </div>
         <div class="course-card">
-            <img src="/utils/photos/flutter.jpg" alt="flutter" class="course-img">
+            <img src="../../utils/photos/flutter.jpg" alt="flutter" class="course-img">
             <div class="course-title">Mobile Development with Flutter</div>
             <div class="course-info">Begins: July 19, 2025</div>
             <div class="course-info">Price: $19</div>
