--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     <header class="topbar">
         <div class="logo" data-lang-key="logo">EduPlatform</div>
         <nav class="nav-links">
-            <a href="screens/CoursesScreen/CoursesScreen.html" target="_blank" data-lang-key="courses">Courses</a>
-            <a href="Screens/AssigmentScreen/Assigment.html" target="_blank" data-lang-key="assignments">Assignments</a>
-            <a href="Screens/StudentDiscussionForums/Discussions.html" target="_blank" data-lang-key="forums">Forums</a>
-            <a href="Screens/VideoLecture&tutorials/video.html" target="_blank" data-lang-key="videos">Video Lectures & Tutorials</a>
-            <a href="Screens/progressScreen/prog.html" target="_blank" data-lang-key="progress">Progress</a>
-            <a href="Screens/certificationScreen/cert.html" target="_blank" data-lang-key="certifications">Certifications</a>
+            <a href="screens/CoursesScreen/CoursesScreen.html" data-lang-key="courses">Courses</a>
+            <a href="Screens/AssigmentScreen/Assigment.html" data-lang-key="assignments">Assignments</a>
+            <a href="Screens/StudentDiscussionForums/Discussions.html" data-lang-key="forums">Forums</a>
+            <a href="Screens/VideoLecture&tutorials/video.html" data-lang-key="videos">Video Lectures & Tutorials</a>
+            <a href="Screens/progressScreen/prog.html" data-lang-key="progress">Progress</a>
+            <a href="Screens/certificationScreen/cert.html" data-lang-key="certifications">Certifications</a>>
         </nav>
     </header>
 
@@ -78,9 +78,9 @@
         <p>&copy; 2025 EduPlatform. <span data-lang-key="rights">All rights reserved.</span></p>
         <nav class="footer-links">
             <a href="#" id="supportLink" data-lang-key="support">Support</a>
-            <a href="screens/ContactUs/ContactUs.html" target="_blank" data-lang-key="contact">Contact Us</a>
+            <a href="screens/ContactUs/ContactUs.html" data-lang-key="contact">Contact Us</a>
             <a href="Screens/Instructors/instr.html" data-lang-key="instructors">Instructor Profiles</a>
-            <a href="Screens/liveChat/chat.html" target="_blank" data-lang-key="chat">Live Chat</a>
+            <a href="Screens/liveChat/chat.html" data-lang-key="chat">Live Chat</a>
         </nav>
     </footer>
 
