--- a/Screens/certificationScreen/cert.html
+++ b/Screens/certificationScreen/cert.html
@@ -15,7 +15,7 @@
             <a href="../AssigmentScreen/Assigment.html">Assignments</a>
             <a href="../StudentDiscussionForums/Discussions.html">Forums</a>
             <a href="../VideoLecture&tutorials/video.html">Video Lectures & Tutorials</a>
-            <a href="../ProgressScreen/Progress.html">Progress</a>
+            <a href="/Screens/progressScreen/prog.html">Progress</a>
             <a href="#" class="active">Certifications</a>
         </nav>
     </header>
