--- a/colors.html
+++ b/colors.html
@@ -11,6 +11,7 @@
                color: #f4efe9;
                color: #478f5e;
                color: #e8e6dd;
+               color: #1d8e45;
             }
         </style>
     </body>
