--- a/Screens/LearningDashboard/Dashboard.html
+++ b/Screens/LearningDashboard/Dashboard.html
@@ -9,11 +9,11 @@
     <header class="topbar">
         <div class="logo">EduPlatform</div>
         <nav class="nav-links">
-            <a href="../CoursesScreen/CoursesScreen.html">Courses</a>
-            <a href="#">Assignments</a>
-            <a href="../StudentDiscussionForums/Discussions.html">Forums</a>
-            <a href="../ProgressScreen/Progress.html">Progress</a>
-            <a href="#">Certifications</a>
+            <a href="/Screens/CoursesScreen/CoursesScreen.html">Courses</a>
+            <a href="/Screens/AssigmentScreen/Assigment.html">Assignments</a>
+            <a href="/Screens/StudentDiscussionForums/Discussions.html">Forums</a>
+            <a href="/Screens/progressScreen/prog.html">Progress</a>
+            <a href="/Screens/certificationScreen/cert.html">Certifications</a>
         </nav>
     </header>
 
@@ -28,12 +28,12 @@
             <div class="card">
                 <h3>Assignments</h3>
                 <p>Check your pending assignments</p>
-                <a href="../AssigmentScreen/Assigment.html">View Assignments</a>
+                <a href="/Screens/AssigmentScreen/Assigment.html">View Assignments</a>
             </div>
             <div class="card">
                 <h3>Progress</h3>
                 <p>Track your learning progress</p>
-                <a href="../ProgressScreen/Progress.html">View Progress</a>
+                <a href="/Screens/progressScreen/prog.html">View Progress</a>
             </div>
         </div>
     </main>
@@ -41,8 +41,8 @@
     <footer class="bottom-bar">
         <p>&copy; 2025 EduPlatform. All rights reserved.</p>
         <nav class="footer-links">
-            <a href="#">Support</a>
-            <a href="../ContactUs/ContactUs.html">ContactUs</a>
+            <a href="/Screens/MultiLanguageSuppot/Language.html">Support</a>
+            <a href="/Screens/ContactUs/ContactUs.html">ContactUs</a>
             <a href="#">Profile</a>
         </nav>
     </footer>
