--- a/index.html
+++ b/index.html
@@ -1,40 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Educational Platform</title>
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
-    <header class="topbar">
-        <div class="logo">EduPlatform</div>
-        <nav class="nav-links">
-            <a href="screens/CoursesScreen/CoursesScreen.html" target="_blank">Courses</a>
-            <a href="Screens/AssigmentScreen/Assigment.html" target="_blank">Assignments</a>
-            <a href="Screens/StudentDiscussionForums/Discussions.html" target="_blank">Forums</a>
-            <a href="Screens/VideoLecture&tutorials/video.html"target="_blank"> videos Lectures & Tutorials</a>
-            <a href="Screens/ProgressScreen/prog.html" target="_blank">Progress</a>
-            <a href="Screens/certificationScreen/cert.html" target="_blank">Certifications</a>
-        </nav>
-    </header>
-    <footer class="bottom-bar">
-        <p>&copy; 2025 EduPlatform. All rights reserved.</p>
-        <nav class="footer-links">
-            <a href="#" target="_blank">Support</a>
-            <a href="screens/ContactUs/ContactUs.html" target="_blank">ContactUs</a>
-            <a href="Screens/Instructors/instr.html">Instructor Profiles</a>
-            <a href="Screens/liveChat/chat.html" target="_blank">Live Chat</a>
-        </nav>
-    </footer>
-    <div class="stack-container">
-        <img src="utils/photos/mainBack.png" id="imgBack" alt="Background Image">
-        <button class="loginButton" type="button" onclick="window.open('screens/LoginScreen/LoginScreen.html')">Login</button>
-        <button class="RegisterButton" type="button" onclick="window.open('Screens/RegisterScreen/RegisterScreen.html')">Register</button>
-    </div>
-</body>
-</html> -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -51,8 +14,8 @@
             <a href="Screens/AssigmentScreen/Assigment.html" data-lang-key="assignments">Assignments</a>
             <a href="Screens/StudentDiscussionForums/Discussions.html" data-lang-key="forums">Forums</a>
             <a href="Screens/VideoLecture&tutorials/video.html" data-lang-key="videos">Video Lectures & Tutorials</a>
-            <a href="Screens/progressScreen/prog.html" data-lang-key="progress">Progress</a>
-            <a href="Screens/certificationScreen/cert.html" data-lang-key="certifications">Certifications</a>>
+            <a href="Screens/LearningDashboard/Dashboard.html" data-lang-key="LearningDashboard">Learning Dashboard</a>
+            <a href="Screens/certificationScreen/cert.html" data-lang-key="certifications">Certifications</a>
         </nav>
     </header>
 
@@ -77,7 +40,7 @@
     <footer class="bottom-bar">
         <p>&copy; 2025 EduPlatform. <span data-lang-key="rights">All rights reserved.</span></p>
         <nav class="footer-links">
-            <a href="#" id="supportLink" data-lang-key="support">Support</a>
+            <a href="/Screens/MultiLanguageSuppot/Language.html" id="supportLink" data-lang-key="support">Support</a>
             <a href="screens/ContactUs/ContactUs.html" data-lang-key="contact">Contact Us</a>
             <a href="Screens/Instructors/instr.html" data-lang-key="instructors">Instructor Profiles</a>
             <a href="Screens/liveChat/chat.html" data-lang-key="chat">Live Chat</a>
