--- a/Screens/LearningDashboard/Dashboard.html
+++ b/Screens/LearningDashboard/Dashboard.html
@@ -35,6 +35,11 @@
                 <p>Track your learning progress</p>
                 <a href="/Screens/progressScreen/prog.html">View Progress</a>
             </div>
+            <div class="card">
+                <h3>Scholarship & Internship</h3>
+                <p>Explore scholarship and internship opportunities</p>
+                <a href="/Screens/Scholarships&Internships/Internship.html">View Opportunities</a>
+            </div>
         </div>
     </main>
 
