--- a/Screens/certificationScreen/cert.html
+++ b/Screens/certificationScreen/cert.html
@@ -25,7 +25,7 @@
         <p class="subtitle">Certificates earned for completed courses</p>
 
         <div class="certification-grid">
-            <!-- Certificate 1 -->
+            <!-- Cer 1 -->
             <div class="certificate-card">
                 <div class="certificate-header">
                     <h3>Introduction to Web Development</h3>
@@ -44,7 +44,7 @@
                 </div>
             </div>
 
-            <!-- Certificate 2 -->
+            <!-- Certif 2 -->
             <div class="certificate-card">
                 <div class="certificate-header">
                     <h3>Data Science Fundamentals</h3>
@@ -64,7 +64,7 @@
                 </div>
             </div>
 
-            <!-- Certificate 3 -->
+            <!-- Cert 3 -->
             <div class="certificate-card">
                 <div class="certificate-header">
                     <h3>Digital Marketing Strategy</h3>
