--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="topbar">
-        <div class="logo" data-lang-key="logo">EduPlatform</div>
+        <div class="logo" data-lang-key="logo">EduPl</div>
         <nav class="nav-links">
             <a href="screens/CoursesScreen/CoursesScreen.html" data-lang-key="courses">Courses</a>
             <a href="Screens/AssigmentScreen/Assigment.html" data-lang-key="assignments">Assignments</a>
@@ -25,7 +25,6 @@
         <button class="RegisterButton" type="button" onclick="window.open('Screens/RegisterScreen/RegisterScreen.html')" data-lang-key="register">Register</button>
     </div>
 
-    <!-- Language Modal (hidden by default) -->
     <div id="languageModal" class="modal">
         <div class="modal-content">
             <span class="close-modal">&times;</span>
