--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header class="topbar">
-        <div class="logo" data-lang-key="logo">EduPl</div>
+        <div class="logo" data-lang-key="logo">EduPlatform</div>
         <nav class="nav-links">
-            <a href="screens/CoursesScreen/CoursesScreen.html" data-lang-key="courses">Courses</a>
+            <a href="screens/Quizzes/quiz.html" data-lang-key="Quizzes">Quizzes</a>
             <a href="Screens/AssigmentScreen/Assigment.html" data-lang-key="assignments">Assignments</a>
             <a href="Screens/StudentDiscussionForums/Discussions.html" data-lang-key="forums">Forums</a>
             <a href="Screens/VideoLecture&tutorials/video.html" data-lang-key="videos">Video Lectures & Tutorials</a>
