--- a/Screens/LearningDashboard/Dashboard.html
+++ b/Screens/LearningDashboard/Dashboard.html
@@ -28,17 +28,17 @@
             <div class="card">
                 <h3>Assignments</h3>
                 <p>Check your pending assignments</p>
-                <a href="/Screens/AssigmentScreen/Assigment.html">View Assignments</a>
+                <a href="../../Screens/AssigmentScreen/Assigment.html">View Assignments</a>
             </div>
             <div class="card">
                 <h3>Progress</h3>
                 <p>Track your learning progress</p>
-                <a href="/Screens/progressScreen/prog.html">View Progress</a>
+                <a href="../../Screens/progressScreen/prog.html">View Progress</a>
             </div>
             <div class="card">
                 <h3>Scholarship & Internship</h3>
                 <p>Explore scholarship and internship opportunities</p>
-                <a href="/Screens/Scholarships&Internships/Internship.html">View Opportunities</a>
+                <a href="../../Screens/Scholarships&Internships/Internship.html">View Opportunities</a>
             </div>
         </div>
     </main>
