Fixed The paths ya Shramet

--- a/Screens/AssigmentScreen/Assigment.html
+++ b/Screens/AssigmentScreen/Assigment.html
@@ -12,8 +12,8 @@
             <a href="../CoursesScreen/CoursesScreen.html">Courses</a>
             <a href="#" class="active">Assignments</a>
             <a href="../StudentDiscussionForums/Discussions.html">Forums</a>
-            <a href="../ProgressScreen/Progress.html">Progress</a>
-            <a href="#">Certifications</a>
+            <a href="../progressScreen/prog.html">Progress</a>
+            <a href="../../Screens/certificationScreen/cert.html">Certifications</a>
         </nav>
     </header>
 
@@ -35,9 +35,8 @@
     <footer class="bottom-bar">
         <p>&copy; 2025 EduPlatform. All rights reserved.</p>
         <nav class="footer-links">
-            <a href="#">Support</a>
+            <a href="../../Screens/MultiLanguageSuppot/Language.html">Support</a>
             <a href="../ContactUs/ContactUs.html">ContactUs</a>
-            <a href="#">Profile</a>
         </nav>
     </footer>
 
