--- a/Screens/LearningDashboard/Dashboard.html
+++ b/Screens/LearningDashboard/Dashboard.html
@@ -9,11 +9,11 @@
     <header class="topbar">
         <div class="logo">EduPlatform</div>
         <nav class="nav-links">
-            <a href="/Screens/CoursesScreen/CoursesScreen.html">Courses</a>
-            <a href="/Screens/AssigmentScreen/Assigment.html">Assignments</a>
-            <a href="/Screens/StudentDiscussionForums/Discussions.html">Forums</a>
-            <a href="/Screens/progressScreen/prog.html">Progress</a>
-            <a href="/Screens/certificationScreen/cert.html">Certifications</a>
+            <a href="../../Screens/CoursesScreen/CoursesScreen.html">Courses</a>
+            <a href="../../Screens/AssigmentScreen/Assigment.html">Assignments</a>
+            <a href="../../Screens/StudentDiscussionForums/Discussions.html">Forums</a>
+            <a href="../../Screens/progressScreen/prog.html">Progress</a>
+            <a href="../../Screens/certificationScreen/cert.html">Certifications</a>
         </nav>
     </header>
 
@@ -46,8 +46,8 @@
     <footer class="bottom-bar">
         <p>&copy; 2025 EduPlatform. All rights reserved.</p>
         <nav class="footer-links">
-            <a href="/Screens/MultiLanguageSuppot/Language.html">Support</a>
-            <a href="/Screens/ContactUs/ContactUs.html">ContactUs</a>
+            <a href="../../Screens/MultiLanguageSuppot/Language.html">Support</a>
+            <a href="../../Screens/ContactUs/ContactUs.html">ContactUs</a>
             <a href="#">Profile</a>
         </nav>
     </footer>
