--- a/Screens/Quizzes/quiz.html
+++ b/Screens/Quizzes/quiz.html
@@ -12,8 +12,8 @@
             <h1>EduPlatform</h1>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/Screens/LoginScreen/LoginScreen.html" class="btn-login">Login</a></li>
+                    <li><a href="../../index.html">Home</a></li>
+                    <li><a href="../LoginScreen/LoginScreen.html" class="btn-login">Login</a></li>
                 </ul>
             </nav>
         </div>
@@ -78,10 +78,7 @@
                 <div class="footer-section">
                     <h4>Quick Links</h4>
                     <ul>
-                        
-                        <li><a href="/Screens/ContactUs/ContactUs.html">Contact</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="../../Screens/ContactUs/ContactUs.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
