--- a/Screens/progressScreen/prog.html
+++ b/Screens/progressScreen/prog.html
@@ -9,12 +9,12 @@
     <header class="topbar">
         <div class="logo">EduPlatform</div>
         <nav class="nav-links">
-            <a href="/Screens/CoursesScreen/CoursesScreen.html">Courses</a>
-            <a href="/Screens/AssigmentScreen/Assigment.html">Assignments</a>
-            <a href="/Screens/StudentDiscussionForums/Discussions.html">Forums</a>
-            <a href="/Screens/VideoLecture&tutorials/video.html">Video Lectures & Tutorials</a>
-            <a href="/Screens/ProgressScreen/Progress.html" class="active">Progress</a>
-            <a href="/Screens/certificationScreen/cert.html">Certifications</a>
+            <a href="../../Screens/CoursesScreen/CoursesScreen.html">Courses</a>
+            <a href="../../Screens/AssigmentScreen/Assigment.html">Assignments</a>
+            <a href="../../Screens/StudentDiscussionForums/Discussions.html">Forums</a>
+            <a href="../../Screens/VideoLecture&tutorials/video.html">Video Lectures & Tutorials</a>
+            <a href="../../Screens/progressScreen/prog.html" class="active">Progress</a>
+            <a href="../../Screens/certificationScreen/cert.html">Certifications</a>
         </nav>
     </header>
     
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="button-container">
-            <button class="scholarship-button" onclick="window.location.href='/Screens/Scholarships&Internships/Internship.html'">
+            <button class="scholarship-button" onclick="window.location.href='../../Screens/Scholarships&Internships/Internship.html'">
                 Scholarships
             </button>
         </div>
@@ -90,7 +90,7 @@
     <footer class="bottom-bar">
         <p>&copy; 2025 EduPlatform. All rights reserved.</p>
         <nav class="footer-links">
-            <a href="/Screens/MultiLanguageSuppot/Language.html">Support</a>
+            <a href="../../Screens/MultiLanguageSuppot/Language.html">Support</a>
             <a href="../ContactUs/ContactUs.html">ContactUs</a>
             <a href="../Instructors/instr.html">Instructor Profiles</a>
             <a href="../liveChat/chat.html">Live Chat</a>
