--- a/Screens/AdminDashboard/admin.html
+++ b/Screens/AdminDashboard/admin.html
@@ -11,11 +11,11 @@
         <h1>Admin Dashboard</h1>
         <nav>
             <ul>
-                <li><a href="/Screens/StudentDiscussionForums/Discussions.html">Discussion Forums</a></li>
+                <li><a href="../../Screens/StudentDiscussionForums/Discussions.html">Discussion Forums</a></li>
                 <li><a href="#">Manage Users</a></li>
                 <li><a href="#">Manage Posts</a></li>
                 <li><a href="#">Settings</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="../../index.html">Logout</a></li>
             </ul>
         </nav>
     </header>
