--- a/Screens/StudentDiscussionForums/Discussions.html
+++ b/Screens/StudentDiscussionForums/Discussions.html
@@ -12,10 +12,8 @@
         <h1>Student Discussion Forums</h1>
         <nav>
             <ul>
-                <li><a href="/index.html" target="_blank">Home</a></li>
+                <li><a href="../../index.html" target="_blank">Home</a></li>
                 <li><a href="#">Forums</a></li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Logout</a></li>
             </ul>
         </nav>
     </header>
