--- a/Screens/certificationScreen/cert.html
+++ b/Screens/certificationScreen/cert.html
@@ -15,7 +15,7 @@
             <a href="../AssigmentScreen/Assigment.html">Assignments</a>
             <a href="../StudentDiscussionForums/Discussions.html">Forums</a>
             <a href="../VideoLecture&tutorials/video.html">Video Lectures & Tutorials</a>
-            <a href="/Screens/progressScreen/prog.html">Progress</a>
+            <a href="../progressScreen/prog.html">Progress</a>
             <a href="#" class="active">Certifications</a>
         </nav>
     </header>
@@ -88,7 +88,7 @@
     <footer class="bottom-bar">
         <p>&copy; 2025 EduPlatform. All rights reserved.</p>
         <nav class="footer-links">
-            <a href="#">Support</a>
+            <a href="../../Screens/MultiLanguageSuppot/Language.html">Support</a>
             <a href="../ContactUs/ContactUs.html">ContactUs</a>
             <a href="../Instructors/instr.html">Instructor Profiles</a>
             <a href="../liveChat/chat.html">Live Chat</a>
