--- a/Screens/LoginScreen/LoginScreen.html
+++ b/Screens/LoginScreen/LoginScreen.html
@@ -75,7 +75,7 @@
         });
     
         function register() {
-            window.location.href = '/Screens/RegisterScreen/RegisterScreen.html';
+            window.location.href = '../RegisterScreen/RegisterScreen.html';
         }
     </script>
 </body>
