--- a/Screens/MultiLanguageSuppot/Language.html
+++ b/Screens/MultiLanguageSuppot/Language.html
@@ -18,10 +18,9 @@
         <div class="container">
             <ul class="language-selector">
                 <li><a href="#" class="active" data-lang="en">English</a></li>
-                <li><a href="#" data-lang="es">Español</a></li>
-                <li><a href="#" data-lang="fr">Français</a></li>
+
                 <li><a href="#" data-lang="ar">العربية</a></li>
-                <li><a href="#" data-lang="zh">中文</a></li>
+
             </ul>
         </div>
     </nav>
@@ -33,22 +32,11 @@
                     <h2>Find Your Perfect Opportunity</h2>
                     <p>Discover scholarships and internships from around the world tailored to your needs and aspirations.</p>
                 </div>
-                <div class="lang-content" data-lang="es">
-                    <h2>Encuentra Tu Oportunidad Perfecta</h2>
-                    <p>Descubre becas y pasantías de todo el mundo adaptadas a tus necesidades y aspiraciones.</p>
-                </div>
-                <div class="lang-content" data-lang="fr">
-                    <h2>Trouvez Votre Opportunité Parfaite</h2>
-                    <p>Découvrez des bourses et des stages du monde entier adaptés à vos besoins et aspirations.</p>
-                </div>
                 <div class="lang-content" data-lang="ar">
                     <h2>ابحث عن فرصتك المثالية</h2>
                     <p>اكتشف المنح الدراسية والتدريبات من جميع أنحاء العالم المصممة خصيصًا لاحتياجاتك وتطلعاتك.</p>
                 </div>
-                <div class="lang-content" data-lang="zh">
-                    <h2>寻找您的完美机会</h2>
-                    <p>发现来自世界各地根据您的需求和愿望量身定制的奖学金和实习机会。</p>
-                </div>
+
             </section>
 
             <section class="features-section">
@@ -77,6 +65,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="multi.js"></script>
 </body>
 </html>
