--- a/Screens/Quizzes/quiz.html
+++ b/Screens/Quizzes/quiz.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="category-card" style="background-color: #1d8e45;">
                     <i class="fas fa-brain"></i>
-                    <h3>Trivia</h3>
+                    <h3>Biology</h3>
                     <p>210 Quizzes</p>
                 </div>
                 <div class="category-card" style="background-color: #1d8e45;">
